<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AC2CC"
    tools:context=".Home"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tourist_spots_worldwide"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:translationX="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="411dp"
        android:layout_height="648dp"
        android:contentDescription="@string/scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/burj"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:clickable="true"
                android:contentDescription="@string/burj"
                app:srcCompat="@drawable/burjkhalifa"
                android:focusable="true" />

            <ImageView
                android:id="@+id/park"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:clickable="true"
                android:contentDescription="@string/park"
                app:layout_column="0"
                app:layout_row="1"
                app:srcCompat="@drawable/centralpark"
                android:focusable="true" />

            <ImageView
                android:id="@+id/tower"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:clickable="true"
                android:contentDescription="@string/tower"
                app:layout_column="0"
                app:layout_row="2"
                app:srcCompat="@drawable/eiffeltower"
                android:focusable="true" />

            <ImageView
                android:id="@+id/falls"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:clickable="true"
                android:contentDescription="@string/falls"
                app:layout_column="0"
                app:layout_row="3"
                app:srcCompat="@drawable/niagara"
                android:focusable="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burj_khalifa"
                android:textColor="#000000"
                android:textSize="34sp"
                android:translationY="70dp"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/central_park"
                android:textColor="#000000"
                android:textSize="34sp"
                android:translationY="70dp"
                app:layout_column="1"
                app:layout_row="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eiffel_tower"
                android:textColor="#000000"
                android:textSize="34sp"
                android:translationY="70dp"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/niagara_falls"
                android:textColor="#000000"
                android:textSize="34sp"
                android:translationY="70dp"
                app:layout_column="1"
                app:layout_row="3" />

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

</LinearLayout>