<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AC2CC"
    tools:context=".falls"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/niagara_falls"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:translationX="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/falls"
        android:translationX="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@drawable/niagara" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="363dp"
        android:layout_height="315dp"
        android:layout_margin="10dp"
        android:justificationMode="inter_word"
        android:text="@string/niagara_falls_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:translationX="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>